# shudaizi-mcp

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  book_research_prompts.md
book_research/: 01_designing_data_intensive_applications.md  02_fundamentals_of_software_architecture.md  03_software_architecture_hard_parts.md  04_clean_architecture.md  05_building_microservices.md  06_philosophy_of_software_design.md  07_web_application_hackers_handbook.md  08_llm_security_playbook.md  09_ai_engineering_chip_huyen.md  10_designing_ml_systems.md  11_llm_engineers_handbook.md  12_unit_testing_khorikov.md  13_growing_oo_software_guided_by_tests.md  14_pragmatic_programmer.md  15_clean_code.md  16_refactoring_fowler.md  17_release_it.md  18_observability_engineering.md  19_site_reliability_engineering.md  20_api_design_patterns.md  21_database_internals.md  22_python_concurrency_asyncio.md  23_design_of_everyday_things.md  24_dont_make_me_think.md  25_laws_of_ux.md  26_storytelling_with_data.md  27_visual_display_quantitative_info.md  28_fundamentals_data_visualization.md  29_inspired_cagan.md  30_shape_up.md  31_continuous_discovery_habits.md  32_devops_handbook.md  33_anthropic_engineering_blog.md  34_llm_as_judge_evaluation.md  35_agenda_mover.md  36_domain_driven_design.md  37_pyramid_principle.md  38_enterprise_integration_patterns.md  39_threat_modeling.md  40_working_backwards.md  (+1 more)
knowledge/: book_index.json  (+1 more)
mcp_server/: README.md  pyproject.toml
mcp_server/src/shudaizi_mcp/: __init__.py  book_loader.py  knowledge_manager.py  routing.py  server.py  tools.py
(+130 files in other folders)
