[project]
name = "shudaizi-mcp"
version = "0.1.0"
description = "MCP server for software engineering knowledge from 33 books + 21 Anthropic articles"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
shudaizi-mcp = "shudaizi_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shudaizi_mcp"]
